update mwe again

--- a/minimal_working_example.ipynb
+++ b/minimal_working_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# this is required ONLY in a Jupyter Notebook\n",
@@ -10,7 +10,7 @@
     "# omit this import and apply in the real code\n",
     "import nest_asyncio\n",
     "\n",
-    "nest_asyncio.apply()  # can be ommited outside jupyter"
+    "nest_asyncio.apply()  # can be omitted outside jupyter"
    ],
    "metadata": {
     "collapsed": false,
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -32,9 +32,9 @@
     },
     {
      "data": {
-      "text/plain": "{'type': 'ahb_expression',\n 'children': [{'string': None,\n   'tree': {'type': 'single_requirement_indicator_expression',\n    'children': [{'string': 'Muss', 'tree': None},\n     {'string': ' [2] U ([3] O [4])[901] U [555]', 'tree': None}]}}]}"
+      "text/plain": "{'type': 'ahb_expression',\n 'children': [{'tree': {'type': 'single_requirement_indicator_expression',\n    'children': [{'tree': None, 'string': 'Muss'},\n     {'tree': None, 'string': ' [2] U ([3] O [4])[901] U [555]'}]},\n   'string': None}]}"
      },
-     "execution_count": 187,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 3,
    "id": "33c9c381-49b6-44ac-a718-fa28dc522571",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "from ahbicht.content_evaluation.rc_evaluators import RcEvaluator\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "from ahbicht.expressions.condition_nodes import ConditionFulfilledValue, EvaluatedFormatConstraint\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "from ahbicht.expressions.hints_provider import HintsProvider\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# we'll just provide some hard coded data here for demonstration purposes\n",
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import inject\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
