--- a/minimal_working_example.ipynb
+++ b/minimal_working_example.ipynb
@@ -32,7 +32,7 @@
     },
     {
      "data": {
-      "text/plain": "{'children': [{'token': None,\n   'tree': {'children': [{'token': {'type': 'MODAL_MARK', 'value': 'Muss'},\n      'tree': None},\n     {'token': {'type': 'CONDITION_EXPRESSION',\n       'value': ' [2] U ([3] O [4])[901] U [555]'},\n      'tree': None}],\n    'type': 'single_requirement_indicator_expression'}}],\n 'type': 'ahb_expression'}"
+      "text/plain": "{'children': [{'tree': {'children': [{'tree': None,\n      'token': {'value': 'Muss', 'type': 'MODAL_MARK'}},\n     {'tree': None,\n      'token': {'value': ' [2] U ([3] O [4])[901] U [555]',\n       'type': 'CONDITION_EXPRESSION'}}],\n    'type': 'single_requirement_indicator_expression'},\n   'token': None}],\n 'type': 'ahb_expression'}"
      },
      "execution_count": 2,
      "metadata": {},
@@ -66,16 +66,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# As written in the README, ahbicht will _not_ do any content evaluation for you.\n",
-    "# You'll need to write your own Evaluator classes for:\n",
-    "# 1. Requirement Constraints (RC) for conditions which are fulfilled/unfulfilled/unknown\n",
-    "# 2. Format Constraints (FC) which describe that data must obey a specified format, e.g. number of post decimal places, MaLo-ID etc.\n",
-    "# 3. Hints: \"Hinweise\", plain text which is passed through"
+    "# The condition expression can be parsed separately and be serialized as a separate tree that contains and_compositions, or_compositions and alike."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'children': [{'tree': {'children': [{'tree': None,\n      'token': {'value': '2', 'type': 'INT'}}],\n    'type': 'condition_key'},\n   'token': None},\n  {'tree': {'children': [{'tree': {'children': [{'tree': {'children': [{'tree': {'children': [{'tree': None,\n               'token': {'value': '3', 'type': 'INT'}}],\n             'type': 'condition_key'},\n            'token': None},\n           {'tree': {'children': [{'tree': None,\n               'token': {'value': '4', 'type': 'INT'}}],\n             'type': 'condition_key'},\n            'token': None}],\n          'type': 'or_composition'},\n         'token': None},\n        {'tree': {'children': [{'tree': None,\n            'token': {'value': '901', 'type': 'INT'}}],\n          'type': 'condition_key'},\n         'token': None}],\n       'type': 'then_also_composition'},\n      'token': None},\n     {'tree': {'children': [{'tree': None,\n         'token': {'value': '555', 'type': 'INT'}}],\n       'type': 'condition_key'},\n      'token': None}],\n    'type': 'and_composition'},\n   'token': None}],\n 'type': 'and_composition'}"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from ahbicht.expressions.condition_expression_parser import parse_condition_expression_to_tree\n",
+    "\n",
+    "condition_tree = parse_condition_expression_to_tree(\" [2] U ([3] O [4])[901] U [555]\")\n",
+    "TreeSchema().dump(condition_tree)\n",
+    "# we're working on parsing both modal marks and conditions in just one method, this is already done in the background."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "# As written in the README, ahbicht will _not_ do any content evaluation for you.\n",
+    "# You'll need to write your own Evaluator classes for:\n",
+    "# 1. Requirement Constraints (RC) for conditions which are fulfilled/unfulfilled/unknown\n",
+    "# 2. Format Constraints (FC) which describe that data must obey a specified format, e.g. number of post decimal places, MaLo-ID etc.\n",
+    "# 3. Hints: \"Hinweise\", plain text which is passed through"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "from ahbicht.content_evaluation.rc_evaluators import RcEvaluator\n",
@@ -121,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "from ahbicht.expressions.condition_nodes import ConditionFulfilledValue, EvaluatedFormatConstraint\n",
@@ -158,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "from ahbicht.expressions.hints_provider import HintsProvider\n",
@@ -187,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# we'll just provide some hard coded data here for demonstration purposes\n",
@@ -211,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "import inject\n",
@@ -237,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
