update mwe with shortcut

--- a/minimal_working_example.ipynb
+++ b/minimal_working_example.ipynb
@@ -32,7 +32,7 @@
     },
     {
      "data": {
-      "text/plain": "{'children': [{'tree': {'children': [{'tree': None,\n      'token': {'value': 'Muss', 'type': 'MODAL_MARK'}},\n     {'tree': None,\n      'token': {'value': ' [2] U ([3] O [4])[901] U [555]',\n       'type': 'CONDITION_EXPRESSION'}}],\n    'type': 'single_requirement_indicator_expression'},\n   'token': None}],\n 'type': 'ahb_expression'}"
+      "text/plain": "{'type': 'ahb_expression',\n 'children': [{'token': None,\n   'tree': {'type': 'single_requirement_indicator_expression',\n    'children': [{'token': {'value': 'Muss', 'type': 'MODAL_MARK'},\n      'tree': None},\n     {'token': {'value': ' [2] U ([3] O [4])[901] U [555]',\n       'type': 'CONDITION_EXPRESSION'},\n      'tree': None}]}}]}"
      },
      "execution_count": 2,
      "metadata": {},
@@ -75,7 +75,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{'children': [{'tree': {'children': [{'tree': None,\n      'token': {'value': '2', 'type': 'INT'}}],\n    'type': 'condition_key'},\n   'token': None},\n  {'tree': {'children': [{'tree': {'children': [{'tree': {'children': [{'tree': {'children': [{'tree': None,\n               'token': {'value': '3', 'type': 'INT'}}],\n             'type': 'condition_key'},\n            'token': None},\n           {'tree': {'children': [{'tree': None,\n               'token': {'value': '4', 'type': 'INT'}}],\n             'type': 'condition_key'},\n            'token': None}],\n          'type': 'or_composition'},\n         'token': None},\n        {'tree': {'children': [{'tree': None,\n            'token': {'value': '901', 'type': 'INT'}}],\n          'type': 'condition_key'},\n         'token': None}],\n       'type': 'then_also_composition'},\n      'token': None},\n     {'tree': {'children': [{'tree': None,\n         'token': {'value': '555', 'type': 'INT'}}],\n       'type': 'condition_key'},\n      'token': None}],\n    'type': 'and_composition'},\n   'token': None}],\n 'type': 'and_composition'}"
+      "text/plain": "{'type': 'and_composition',\n 'children': [{'token': None,\n   'tree': {'type': 'condition_key',\n    'children': [{'token': {'value': '2', 'type': 'INT'}, 'tree': None}]}},\n  {'token': None,\n   'tree': {'type': 'and_composition',\n    'children': [{'token': None,\n      'tree': {'type': 'then_also_composition',\n       'children': [{'token': None,\n         'tree': {'type': 'or_composition',\n          'children': [{'token': None,\n            'tree': {'type': 'condition_key',\n             'children': [{'token': {'value': '3', 'type': 'INT'},\n               'tree': None}]}},\n           {'token': None,\n            'tree': {'type': 'condition_key',\n             'children': [{'token': {'value': '4', 'type': 'INT'},\n               'tree': None}]}}]}},\n        {'token': None,\n         'tree': {'type': 'condition_key',\n          'children': [{'token': {'value': '901', 'type': 'INT'},\n            'tree': None}]}}]}},\n     {'token': None,\n      'tree': {'type': 'condition_key',\n       'children': [{'token': {'value': '555', 'type': 'INT'},\n         'tree': None}]}}]}}]}"
      },
      "execution_count": 4,
      "metadata": {},
@@ -267,7 +267,7 @@
     "# But later on we can provide AHBicht with the content evaluation results ...\n",
     "# Providing the content evaluation results to find out, if a line in the AHB is actually required,\n",
     "# is called expression evaluation\n",
-    "expression_evalution_result = evaluate_ahb_expression_tree(tree, entered_input=hardcoded_content_evaluations)"
+    "expression_evaluation_result = evaluate_ahb_expression_tree(tree, entered_input=hardcoded_content_evaluations)"
    ],
    "metadata": {
     "collapsed": false,
@@ -291,14 +291,57 @@
     }
    ],
    "source": [
-    "print(f\"It's actually a '{expression_evalution_result.requirement_indicator}'field.\")\n",
-    "if expression_evalution_result.format_constraint_evaluation_result.format_constraints_fulfilled:\n",
+    "print(f\"It's actually a '{expression_evaluation_result.requirement_indicator}'field.\")\n",
+    "if expression_evaluation_result.format_constraint_evaluation_result.format_constraints_fulfilled:\n",
     "    print(f\"The format constraint is fulfilled => Data are ok.\")\n",
     "else:\n",
     "    print(\n",
-    "        f'The format constraint is _not_ fulfilled: \"{expression_evalution_result.format_constraint_evaluation_result.error_message}\"'\n",
+    "        f'The format constraint is _not_ fulfilled: \"{expression_evaluation_result.format_constraint_evaluation_result.error_message}\"'\n",
     "    )\n",
-    "print(f'Please note the following hint: \"{expression_evalution_result.requirement_constraint_evaluation_result.hints}\"')"
+    "print(\n",
+    "    f'Please note the following hint: \"{expression_evaluation_result.requirement_constraint_evaluation_result.hints}\"'\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ConditionCheckResult(requirement_indicator='Muss', requirement_constraint_evaluation_result=RequirementConstraintEvaluationResult(requirement_constraints_fulfilled=True, requirement_is_conditional=True, format_constraints_expression='[901]', hints='foo'), format_constraint_evaluation_result=FormatConstraintEvaluationResult(format_constraints_fulfilled=True, error_message=None))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ahbicht.content_evaluation.evaluator_factory import create_and_inject_hardcoded_evaluators\n",
+    "from ahbicht.content_evaluation.content_evaluation_result import ContentEvaluationResult\n",
+    "\n",
+    "inject.clear()\n",
+    "# If you're only dealing with hard coded content evaluation results, there is a short cut to evaluate a modal mark expression:\n",
+    "# 1. put the hard coded results into a content evaluation result:\n",
+    "content_evaluation_result = ContentEvaluationResult(\n",
+    "    hints={\"555\": \"foo\"},\n",
+    "    format_constraints={\n",
+    "        \"901\": EvaluatedFormatConstraint(format_constraint_fulfilled=True, error_message=None),\n",
+    "    },\n",
+    "    requirement_constraints={\n",
+    "        \"2\": ConditionFulfilledValue.FULFILLED,\n",
+    "        \"3\": ConditionFulfilledValue.UNFULFILLED,\n",
+    "        \"4\": ConditionFulfilledValue.FULFILLED,\n",
+    "    },\n",
+    ")\n",
+    "create_and_inject_hardcoded_evaluators(content_evaluation_result)\n",
+    "evaluated = evaluate_ahb_expression_tree(tree, entered_input=\"\")\n",
+    "print(evaluated)"
    ],
    "metadata": {
     "collapsed": false,
