--- a/minimal_working_example.ipynb
+++ b/minimal_working_example.ipynb
@@ -317,7 +317,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ConditionCheckResult(requirement_indicator='Muss', requirement_constraint_evaluation_result=RequirementConstraintEvaluationResult(requirement_constraints_fulfilled=True, requirement_is_conditional=True, format_constraints_expression='[901]', hints='foo'), format_constraint_evaluation_result=FormatConstraintEvaluationResult(format_constraints_fulfilled=True, error_message=None))\n"
+      "AhbExpressionEvaluationResult(requirement_indicator='Muss', requirement_constraint_evaluation_result=RequirementConstraintEvaluationResult(requirement_constraints_fulfilled=True, requirement_is_conditional=True, format_constraints_expression='[901]', hints='foo'), format_constraint_evaluation_result=FormatConstraintEvaluationResult(format_constraints_fulfilled=True, error_message=None))\n"
      ]
     }
    ],
