update jupyter notebook

--- a/minimal_working_example.ipynb
+++ b/minimal_working_example.ipynb
@@ -27,12 +27,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tree('ahb_expression', [Tree('single_requirement_indicator_expression', [Token('MODAL_MARK', 'Muss'), Token('CONDITION_EXPRESSION', ' [2] U ([3] O [4])[901] U [555]')])])\n"
+      "Tree(Token('RULE', 'ahb_expression'), [Tree('single_requirement_indicator_expression', [Token('MODAL_MARK', 'Muss'), Token('CONDITION_EXPRESSION', ' [2] U ([3] O [4])[901] U [555]')])])\n"
      ]
     },
     {
      "data": {
-      "text/plain": "{'type': 'ahb_expression',\n 'children': [{'token': None,\n   'tree': {'type': 'single_requirement_indicator_expression',\n    'children': [{'token': {'value': 'Muss', 'type': 'MODAL_MARK'},\n      'tree': None},\n     {'token': {'value': ' [2] U ([3] O [4])[901] U [555]',\n       'type': 'CONDITION_EXPRESSION'},\n      'tree': None}]}}]}"
+      "text/plain": "{'children': [{'tree': {'children': [{'tree': None,\n      'token': {'type': 'MODAL_MARK', 'value': 'Muss'}},\n     {'tree': None,\n      'token': {'type': 'CONDITION_EXPRESSION',\n       'value': ' [2] U ([3] O [4])[901] U [555]'}}],\n    'type': 'single_requirement_indicator_expression'},\n   'token': None}],\n 'type': 'ahb_expression'}"
      },
      "execution_count": 2,
      "metadata": {},
@@ -75,7 +75,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{'type': 'and_composition',\n 'children': [{'token': None,\n   'tree': {'type': 'condition_key',\n    'children': [{'token': {'value': '2', 'type': 'INT'}, 'tree': None}]}},\n  {'token': None,\n   'tree': {'type': 'and_composition',\n    'children': [{'token': None,\n      'tree': {'type': 'then_also_composition',\n       'children': [{'token': None,\n         'tree': {'type': 'or_composition',\n          'children': [{'token': None,\n            'tree': {'type': 'condition_key',\n             'children': [{'token': {'value': '3', 'type': 'INT'},\n               'tree': None}]}},\n           {'token': None,\n            'tree': {'type': 'condition_key',\n             'children': [{'token': {'value': '4', 'type': 'INT'},\n               'tree': None}]}}]}},\n        {'token': None,\n         'tree': {'type': 'condition_key',\n          'children': [{'token': {'value': '901', 'type': 'INT'},\n            'tree': None}]}}]}},\n     {'token': None,\n      'tree': {'type': 'condition_key',\n       'children': [{'token': {'value': '555', 'type': 'INT'},\n         'tree': None}]}}]}}]}"
+      "text/plain": "{'children': [{'tree': {'children': [{'tree': {'children': [{'tree': None,\n         'token': {'type': 'INT', 'value': '2'}}],\n       'type': 'condition_key'},\n      'token': None},\n     {'tree': {'children': [{'tree': {'children': [{'tree': {'children': [{'tree': None,\n               'token': {'type': 'INT', 'value': '3'}}],\n             'type': 'condition_key'},\n            'token': None},\n           {'tree': {'children': [{'tree': None,\n               'token': {'type': 'INT', 'value': '4'}}],\n             'type': 'condition_key'},\n            'token': None}],\n          'type': 'or_composition'},\n         'token': None},\n        {'tree': {'children': [{'tree': None,\n            'token': {'type': 'INT', 'value': '901'}}],\n          'type': 'condition_key'},\n         'token': None}],\n       'type': 'then_also_composition'},\n      'token': None}],\n    'type': 'and_composition'},\n   'token': None},\n  {'tree': {'children': [{'tree': None,\n      'token': {'type': 'INT', 'value': '555'}}],\n    'type': 'condition_key'},\n   'token': None}],\n 'type': 'and_composition'}"
      },
      "execution_count": 4,
      "metadata": {},
