--- a/minimal_working_example.ipynb
+++ b/minimal_working_example.ipynb
@@ -127,7 +127,7 @@
     "\n",
     "class MyRequirementConstraintEvaluator(RcEvaluator):\n",
     "    \"\"\"\n",
-    "    A Requirement Constraint (RC) Evaluator answers questions of the kind: \"Is the condition <condition_number> required?\"\n",
+    "    A Requirement Constraint (RC) Evaluator answers questions of the kind: \"Is the condition <condition_number> fulfilled?\"\n",
     "    \"\"\"\n",
     "\n",
     "    def _get_default_context(self) -> EvaluationContext:\n",
