--- a/minimal_working_example.ipynb
+++ b/minimal_working_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# this is required ONLY in a Jupyter Notebook\n",
@@ -21,20 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tree('ahb_expression', [Tree('single_requirement_indicator_expression', [Token('MODAL_MARK', 'Muss'), Token('CONDITION_EXPRESSION', ' [2] U ([3] O [4])[901] U [555]')])])\n"
+      "Tree(Token('RULE', 'ahb_expression'), [Tree('single_requirement_indicator_expression', [Token('MODAL_MARK', 'Muss'), Token('CONDITION_EXPRESSION', ' [2] U ([3] O [4])[901] U [555]')])])\n"
      ]
     },
     {
      "data": {
-      "text/plain": "{'type': 'ahb_expression',\n 'children': [{'token': None,\n   'tree': {'type': 'single_requirement_indicator_expression',\n    'children': [{'token': {'value': 'Muss', 'type': 'MODAL_MARK'},\n      'tree': None},\n     {'token': {'value': ' [2] U ([3] O [4])[901] U [555]',\n       'type': 'CONDITION_EXPRESSION'},\n      'tree': None}]}}]}"
+      "text/plain": "{'children': [{'token': None,\n   'tree': {'children': [{'token': {'type': 'MODAL_MARK', 'value': 'Muss'},\n      'tree': None},\n     {'token': {'type': 'CONDITION_EXPRESSION',\n       'value': ' [2] U ([3] O [4])[901] U [555]'},\n      'tree': None}],\n    'type': 'single_requirement_indicator_expression'}}],\n 'type': 'ahb_expression'}"
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "33c9c381-49b6-44ac-a718-fa28dc522571",
    "metadata": {},
    "outputs": [],
@@ -71,13 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'type': 'and_composition',\n 'children': [{'token': None,\n   'tree': {'type': 'condition_key',\n    'children': [{'token': {'value': '2', 'type': 'INT'}, 'tree': None}]}},\n  {'token': None,\n   'tree': {'type': 'and_composition',\n    'children': [{'token': None,\n      'tree': {'type': 'then_also_composition',\n       'children': [{'token': None,\n         'tree': {'type': 'or_composition',\n          'children': [{'token': None,\n            'tree': {'type': 'condition_key',\n             'children': [{'token': {'value': '3', 'type': 'INT'},\n               'tree': None}]}},\n           {'token': None,\n            'tree': {'type': 'condition_key',\n             'children': [{'token': {'value': '4', 'type': 'INT'},\n               'tree': None}]}}]}},\n        {'token': None,\n         'tree': {'type': 'condition_key',\n          'children': [{'token': {'value': '901', 'type': 'INT'},\n            'tree': None}]}}]}},\n     {'token': None,\n      'tree': {'type': 'condition_key',\n       'children': [{'token': {'value': '555', 'type': 'INT'},\n         'tree': None}]}}]}}]}"
+      "text/plain": "{'children': [{'token': None,\n   'tree': {'children': [{'token': {'type': 'INT', 'value': '2'},\n      'tree': None}],\n    'type': 'condition_key'}},\n  {'token': None,\n   'tree': {'children': [{'token': None,\n      'tree': {'children': [{'token': None,\n         'tree': {'children': [{'token': None,\n            'tree': {'children': [{'token': {'type': 'INT', 'value': '3'},\n               'tree': None}],\n             'type': 'condition_key'}},\n           {'token': None,\n            'tree': {'children': [{'token': {'type': 'INT', 'value': '4'},\n               'tree': None}],\n             'type': 'condition_key'}}],\n          'type': 'or_composition'}},\n        {'token': None,\n         'tree': {'children': [{'token': {'type': 'INT', 'value': '901'},\n            'tree': None}],\n          'type': 'condition_key'}}],\n       'type': 'then_also_composition'}},\n     {'token': None,\n      'tree': {'children': [{'token': {'type': 'INT', 'value': '555'},\n         'tree': None}],\n       'type': 'condition_key'}}],\n    'type': 'and_composition'}}],\n 'type': 'and_composition'}"
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "# As written in the README, ahbicht will _not_ do any content evaluation for you.\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "from ahbicht.content_evaluation.rc_evaluators import RcEvaluator\n",
@@ -127,7 +127,7 @@
     "\n",
     "class MyRequirementConstraintEvaluator(RcEvaluator):\n",
     "    \"\"\"\n",
-    "    A Requirement Constraint (RC) Evaluator answers questions of the kind: \"Is the condition <condition_number> required?\"\n",
+    "    A Requirement Constraint (RC) Evaluator answers questions of the kind: \"Is the condition <condition_number> fulfilled?\"\n",
     "    \"\"\"\n",
     "\n",
     "    def _get_default_context(self) -> EvaluationContext:\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "from ahbicht.expressions.condition_nodes import ConditionFulfilledValue, EvaluatedFormatConstraint\n",
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "from ahbicht.expressions.hints_provider import HintsProvider\n",
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "# we'll just provide some hard coded data here for demonstration purposes\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "import inject\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stdout",
