--- a/minimal_working_example.ipynb
+++ b/minimal_working_example.ipynb
@@ -27,12 +27,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tree(Token('RULE', 'ahb_expression'), [Tree('single_requirement_indicator_expression', [Token('MODAL_MARK', 'Muss'), Tree('and_composition', [Tree('and_composition', [Tree(Token('RULE', 'condition_key'), [Token('INT', '2')]), Tree('then_also_composition', [Tree('or_composition', [Tree(Token('RULE', 'condition_key'), [Token('INT', '3')]), Tree(Token('RULE', 'condition_key'), [Token('INT', '4')])]), Tree(Token('RULE', 'condition_key'), [Token('INT', '901')])])]), Tree(Token('RULE', 'condition_key'), [Token('INT', '555')])])])])\n"
+      "Tree(Token('RULE', 'ahb_expression'), [Tree('single_requirement_indicator_expression', [Token('MODAL_MARK', 'Muss'), Tree('and_composition', [Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '2')]), Tree('and_composition', [Tree('then_also_composition', [Tree('or_composition', [Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '3')]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '4')])]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '901')])]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '555')])])])])])\n"
      ]
     },
     {
      "data": {
-      "text/plain": "{'type': 'ahb_expression',\n 'children': [{'tree': {'type': 'single_requirement_indicator_expression',\n    'children': [{'tree': None,\n      'token': {'type': 'MODAL_MARK', 'value': 'Muss'}},\n     {'tree': {'type': 'and_composition',\n       'children': [{'tree': {'type': 'and_composition',\n          'children': [{'tree': {'type': 'condition_key',\n             'children': [{'tree': None,\n               'token': {'type': 'INT', 'value': '2'}}]},\n            'token': None},\n           {'tree': {'type': 'then_also_composition',\n             'children': [{'tree': {'type': 'or_composition',\n                'children': [{'tree': {'type': 'condition_key',\n                   'children': [{'tree': None,\n                     'token': {'type': 'INT', 'value': '3'}}]},\n                  'token': None},\n                 {'tree': {'type': 'condition_key',\n                   'children': [{'tree': None,\n                     'token': {'type': 'INT', 'value': '4'}}]},\n                  'token': None}]},\n               'token': None},\n              {'tree': {'type': 'condition_key',\n                'children': [{'tree': None,\n                  'token': {'type': 'INT', 'value': '901'}}]},\n               'token': None}]},\n            'token': None}]},\n         'token': None},\n        {'tree': {'type': 'condition_key',\n          'children': [{'tree': None,\n            'token': {'type': 'INT', 'value': '555'}}]},\n         'token': None}]},\n      'token': None}]},\n   'token': None}]}"
+      "text/plain": "{'children': [{'token': None,\n   'tree': {'children': [{'token': {'type': 'MODAL_MARK', 'value': 'Muss'},\n      'tree': None},\n     {'token': None,\n      'tree': {'children': [{'token': None,\n         'tree': {'children': [{'token': {'type': 'CONDITION_KEY',\n             'value': '2'},\n            'tree': None}],\n          'type': 'condition'}},\n        {'token': None,\n         'tree': {'children': [{'token': None,\n            'tree': {'children': [{'token': None,\n               'tree': {'children': [{'token': None,\n                  'tree': {'children': [{'token': {'type': 'CONDITION_KEY',\n                      'value': '3'},\n                     'tree': None}],\n                   'type': 'condition'}},\n                 {'token': None,\n                  'tree': {'children': [{'token': {'type': 'CONDITION_KEY',\n                      'value': '4'},\n                     'tree': None}],\n                   'type': 'condition'}}],\n                'type': 'or_composition'}},\n              {'token': None,\n               'tree': {'children': [{'token': {'type': 'CONDITION_KEY',\n                   'value': '901'},\n                  'tree': None}],\n                'type': 'condition'}}],\n             'type': 'then_also_composition'}},\n           {'token': None,\n            'tree': {'children': [{'token': {'type': 'CONDITION_KEY',\n                'value': '555'},\n               'tree': None}],\n             'type': 'condition'}}],\n          'type': 'and_composition'}}],\n       'type': 'and_composition'}}],\n    'type': 'single_requirement_indicator_expression'}}],\n 'type': 'ahb_expression'}"
      },
      "execution_count": 2,
      "metadata": {},
@@ -42,7 +42,7 @@
    "source": [
     "from ahbicht.expressions.expression_resolver import parse_expression_including_unresolved_subexpressions\n",
     "\n",
-    "tree = parse_expression_including_unresolved_subexpressions(\n",
+    "tree = await parse_expression_including_unresolved_subexpressions(\n",
     "    \"Muss [2] U ([3] O [4])[901] U [555]\"\n",
     ")  # the expression as you get it from the AHB\n",
     "print(tree)  # The tree is a data structure that represents the expression\n",
@@ -65,7 +65,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{'ahb_expression': [{'single_requirement_indicator_expression': ['Muss',\n    {'and_composition': [{'and_composition': ['2',\n        {'then_also_composition': [{'or_composition': ['3', '4']}, '901']}]},\n      '555']}]}]}"
+      "text/plain": "{'ahb_expression': [{'single_requirement_indicator_expression': ['Muss',\n    {'and_composition': ['2',\n      {'and_composition': [{'then_also_composition': [{'or_composition': ['3',\n            '4']},\n          '901']},\n        '555']}]}]}]}"
      },
      "execution_count": 3,
      "metadata": {},
@@ -75,7 +75,7 @@
    "source": [
     "# Now, to be honest, this looks pretty lengthy. That's why you can serialize the tree in a more concise way using the so called \"concise schema\".\n",
     "# Note that the concise json dump is _not_ deserializable (yet). So \"concise serialization\" is a one way street so far.\n",
-    "from ahbicht.json_serialization.tree_schema import ConciseTreeSchema\n",
+    "from ahbicht.json_serialization.concise_tree_schema import ConciseTreeSchema\n",
     "\n",
     "ConciseTreeSchema().dump(tree)"
    ],
@@ -110,7 +110,7 @@
    "outputs": [],
    "source": [
     "from ahbicht.content_evaluation.rc_evaluators import RcEvaluator\n",
-    "from ahbicht.edifact import EdifactFormat, EdifactFormatVersion\n",
+    "from maus.edifact import EdifactFormat, EdifactFormatVersion\n",
     "from ahbicht.content_evaluation.evaluationdatatypes import EvaluationContext, EvaluatableData\n",
     "\n",
     "\n",
@@ -128,24 +128,23 @@
     "    edifact_format = EdifactFormat.UTILMD\n",
     "    edifact_format_version = EdifactFormatVersion.FV2104  # valid since 2021-04-01\n",
     "\n",
-    "    def __init__(self, evaluatable_data):\n",
-    "        super().__init__(evaluatable_data=evaluatable_data)\n",
+    "    # note that requirement constraint evaluation methods can also be async, if necessary.\n",
     "\n",
-    "    async def evaluate_2(self, context: EvaluationContext):\n",
+    "    def evaluate_2(self, evaluatable_data: EvaluatableData, context: EvaluationContext):\n",
     "        # Insert your own logic for condition \"[2]\" here.\n",
     "        # This can be an async method, which allows you to do e.g. requests to microservices or databases.\n",
     "        # The outcome of all these methods is always a so called `ConditionFulfilledValue`\n",
     "        # See the docs: https://ahbicht.readthedocs.io/en/latest/api/ahbicht.expressions.html?highlight=ConditionFulfilledValue#ahbicht.expressions.condition_nodes.ConditionFulfilledValue\n",
-    "        return self.evaluatable_data.edifact_seed[\"2\"]\n",
+    "        return evaluatable_data.edifact_seed[\"2\"]\n",
     "\n",
-    "    def evaluate_3(self, context: EvaluationContext):\n",
+    "    def evaluate_3(self, evaluatable_data: EvaluatableData, context: EvaluationContext):\n",
     "        # Insert you own logic for condition \"[3]\" here,\n",
     "        # You can also use sync methods for evaluations that don't require any lookups.\n",
-    "        return self.evaluatable_data.edifact_seed[\"3\"]\n",
+    "        return evaluatable_data.edifact_seed[\"3\"]\n",
     "\n",
-    "    async def evaluate_4(self, context: EvaluationContext):\n",
+    "    def evaluate_4(self, evaluatable_data: EvaluatableData, context: EvaluationContext):\n",
     "        # Insert your own logic for condition \"[4]\" here\n",
-    "        return self.evaluatable_data.edifact_seed[\"4\"]"
+    "        return evaluatable_data.edifact_seed[\"4\"]"
    ],
    "metadata": {
     "collapsed": false,
@@ -172,8 +171,8 @@
     "\n",
     "    edifact_format = EdifactFormat.UTILMD\n",
     "    edifact_format_version = EdifactFormatVersion.FV2104  # valid since 2021-04-01\n",
-    "\n",
-    "    async def evaluate_901(self, entered_input):\n",
+    "    # note that format constraint evaluation methods can also be async, if necessary\n",
+    "    def evaluate_901(self, entered_input):\n",
     "        \"\"\"\n",
     "        This method checks if the entered_input fulfills the constraints of condition 901.\n",
     "        This could be f.e. if entered_input is a valid OBIS, a valid Marktlokations-ID etc.\n",
@@ -212,7 +211,9 @@
     "    edifact_format = EdifactFormat.UTILMD\n",
     "    edifact_format_version = EdifactFormatVersion.FV2104\n",
     "\n",
-    "    async def get_hint_text(self, condition_key: str):\n",
+    "    # note that hint text provisioning methods can also be async, if necessary\n",
+    "\n",
+    "    def get_hint_text(self, condition_key: str):\n",
     "        # Implement your own logic here, e.g. read the actual hint from a database or microservice\n",
     "        # (spoiler: Hochfrequenz has a public REST API that does exactly that, just drop us a line)\n",
     "        if condition_key == \"555\":\n",
@@ -258,13 +259,22 @@
    "outputs": [],
    "source": [
     "import inject\n",
+    "from ahbicht.content_evaluation.evaluationdatatypes import EvaluatableDataProvider\n",
     "from ahbicht.expressions.ahb_expression_evaluation import evaluate_ahb_expression_tree\n",
     "\n",
     "# We use dependency injection to get the evaluators in place:\n",
+    "def provide_evaluatable_data():\n",
+    "    # place your own dynamic(!) data provision method here\n",
+    "    return EvaluatableData(edifact_seed=hardcoded_content_evaluations)\n",
+    "\n",
+    "\n",
     "inject.clear_and_configure(\n",
-    "    lambda binder: binder.bind(RcEvaluator, MyRequirementConstraintEvaluator(evaluatable_data=my_evaluatable_data))\n",
+    "    lambda binder: binder.bind(RcEvaluator, MyRequirementConstraintEvaluator())\n",
     "    .bind(FcEvaluator, MyFormatConstraintEvaluator())\n",
     "    .bind(HintsProvider, MyHintsProvider())\n",
+    "    # While the evaluators are injected as singleton style instances, the evaluatable data may change in each call.\n",
+    "    # This is why they are injected with \"bind_to_provider\" instead of a simple \"bind\".\n",
+    "    .bind_to_provider(EvaluatableDataProvider, provide_evaluatable_data)\n",
     ")\n",
     "\n",
     "# But later on we can provide AHBicht with the content evaluation results ...\n",
@@ -325,7 +335,7 @@
     }
    ],
    "source": [
-    "# If writing the RcEvaluator+FcEvaluator+HintsProvider feels like overengineering for your use case, we have you covered.\n",
+    "# If writing the RcEvaluator+FcEvaluator+HintsProvider feels like over-engineering for your use case, we have you covered.\n",
     "# If you already know the values of the single requirement constraints, format constraints and texts for the hint, you can just generate the Evaluator classes on the fly based on the information you have.\n",
     "from ahbicht.content_evaluation.evaluator_factory import create_and_inject_hardcoded_evaluators\n",
     "from ahbicht.content_evaluation.content_evaluation_result import ContentEvaluationResult\n",
@@ -365,7 +375,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CategorizedKeyExtract(hint_keys=['555'], format_constraint_keys=['901'], requirement_constraint_keys=['2', '3', '4'], package_keys=[])\n"
+      "CategorizedKeyExtract(hint_keys=['555'], format_constraint_keys=['901'], requirement_constraint_keys=['2', '3', '4'], package_keys=[], time_condition_keys=[])\n"
      ]
     }
    ],
@@ -374,7 +384,7 @@
     "# There is a simple way to pre-calculate all possible outcomes of an expression in advance:\n",
     "from ahbicht.expressions.condition_expression_parser import extract_categorized_keys\n",
     "\n",
-    "categorized_key_extract = extract_categorized_keys(\"[2] U ([3] O [4])[901] U [555]\")\n",
+    "categorized_key_extract = await extract_categorized_keys(\"[2] U ([3] O [4])[901] U [555]\")\n",
     "print(categorized_key_extract)"
    ],
    "metadata": {
@@ -415,7 +425,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(ContentEvaluationResult(hints={'555': 'Hinweis 555'}, format_constraints={'901': EvaluatedFormatConstraint(format_constraint_fulfilled=True, error_message=None)}, requirement_constraints={'2': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '3': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '4': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>}, id=None), AhbExpressionEvaluationResult(requirement_indicator=<ModalMark.MUSS: 'MUSS'>, requirement_constraint_evaluation_result=RequirementConstraintEvaluationResult(requirement_constraints_fulfilled=True, requirement_is_conditional=True, format_constraints_expression='[901]', hints='Hinweis 555'), format_constraint_evaluation_result=FormatConstraintEvaluationResult(format_constraints_fulfilled=True, error_message=None))), (ContentEvaluationResult(hints={'555': 'Hinweis 555'}, format_constraints={'901': EvaluatedFormatConstraint(format_constraint_fulfilled=True, error_message=None)}, requirement_constraints={'2': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '3': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '4': <ConditionFulfilledValue.UNFULFILLED: 'UNFULFILLED'>}, id=None), AhbExpressionEvaluationResult(requirement_indicator=<ModalMark.MUSS: 'MUSS'>, requirement_constraint_evaluation_result=RequirementConstraintEvaluationResult(requirement_constraints_fulfilled=True, requirement_is_conditional=True, format_constraints_expression='[901]', hints='Hinweis 555'), format_constraint_evaluation_result=FormatConstraintEvaluationResult(format_constraints_fulfilled=True, error_message=None)))]\n"
+      "[(ContentEvaluationResult(hints={'555': 'Hinweis 555'}, format_constraints={'901': EvaluatedFormatConstraint(format_constraint_fulfilled=True, error_message=None)}, requirement_constraints={'2': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '3': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '4': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>}, packages={}, id=None), AhbExpressionEvaluationResult(requirement_indicator=<ModalMark.MUSS: 'MUSS'>, requirement_constraint_evaluation_result=RequirementConstraintEvaluationResult(requirement_constraints_fulfilled=True, requirement_is_conditional=True, format_constraints_expression='[901]', hints='Hinweis 555'), format_constraint_evaluation_result=FormatConstraintEvaluationResult(format_constraints_fulfilled=True, error_message=None))), (ContentEvaluationResult(hints={'555': 'Hinweis 555'}, format_constraints={'901': EvaluatedFormatConstraint(format_constraint_fulfilled=True, error_message=None)}, requirement_constraints={'2': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '3': <ConditionFulfilledValue.FULFILLED: 'FULFILLED'>, '4': <ConditionFulfilledValue.UNFULFILLED: 'UNFULFILLED'>}, packages={}, id=None), AhbExpressionEvaluationResult(requirement_indicator=<ModalMark.MUSS: 'MUSS'>, requirement_constraint_evaluation_result=RequirementConstraintEvaluationResult(requirement_constraints_fulfilled=True, requirement_is_conditional=True, format_constraints_expression='[901]', hints='Hinweis 555'), format_constraint_evaluation_result=FormatConstraintEvaluationResult(format_constraints_fulfilled=True, error_message=None)))]\n"
      ]
     }
    ],
@@ -425,7 +435,9 @@
     "    create_and_inject_hardcoded_evaluators(content_evaluation_result)\n",
     "    try:\n",
     "        expression_evaluation_result = await evaluate_ahb_expression_tree(\n",
-    "            parse_expression_including_unresolved_subexpressions(expression=\"Muss [2] U ([3] O [4])[901] U [555]\"),\n",
+    "            await parse_expression_including_unresolved_subexpressions(\n",
+    "                expression=\"Muss [2] U ([3] O [4])[901] U [555]\"\n",
+    "            ),\n",
     "            entered_input=\"\",\n",
     "        )\n",
     "    except NotImplementedError:\n",
