Extend Jupyter MWE; Rename ListBased...->Singleton...

--- a/minimal_working_example.ipynb
+++ b/minimal_working_example.ipynb
@@ -10,6 +10,8 @@
     "# omit this import and apply in the real code\n",
     "import nest_asyncio\n",
     "\n",
+    "from ahbicht.mapping_results import PackageKeyConditionExpressionMapping\n",
+    "\n",
     "nest_asyncio.apply()  # can be omitted outside jupyter"
    ],
    "metadata": {
@@ -27,12 +29,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tree(Token('RULE', 'ahb_expression'), [Tree('single_requirement_indicator_expression', [Token('MODAL_MARK', 'Muss'), Tree('and_composition', [Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '2')]), Tree('and_composition', [Tree('then_also_composition', [Tree('or_composition', [Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '3')]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '4')])]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '901')])]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '555')])])])])])\n"
+      "Tree(Token('RULE', 'ahb_expression'), [Tree('single_requirement_indicator_expression', [Token('MODAL_MARK', 'Muss'), Tree('and_composition', [Tree('and_composition', [Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '2')]), Tree('then_also_composition', [Tree('and_composition', [Tree('or_composition', [Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '3')]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '4')])]), Tree(Token('RULE', 'package'), [Token('PACKAGE_KEY', '123P')])]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '901')])])]), Tree(Token('RULE', 'condition'), [Token('CONDITION_KEY', '555')])])])])\n"
      ]
     },
     {
      "data": {
-      "text/plain": "{'children': [{'token': None,\n   'tree': {'children': [{'token': {'type': 'MODAL_MARK', 'value': 'Muss'},\n      'tree': None},\n     {'token': None,\n      'tree': {'children': [{'token': None,\n         'tree': {'children': [{'token': {'type': 'CONDITION_KEY',\n             'value': '2'},\n            'tree': None}],\n          'type': 'condition'}},\n        {'token': None,\n         'tree': {'children': [{'token': None,\n            'tree': {'children': [{'token': None,\n               'tree': {'children': [{'token': None,\n                  'tree': {'children': [{'token': {'type': 'CONDITION_KEY',\n                      'value': '3'},\n                     'tree': None}],\n                   'type': 'condition'}},\n                 {'token': None,\n                  'tree': {'children': [{'token': {'type': 'CONDITION_KEY',\n                      'value': '4'},\n                     'tree': None}],\n                   'type': 'condition'}}],\n                'type': 'or_composition'}},\n              {'token': None,\n               'tree': {'children': [{'token': {'type': 'CONDITION_KEY',\n                   'value': '901'},\n                  'tree': None}],\n                'type': 'condition'}}],\n             'type': 'then_also_composition'}},\n           {'token': None,\n            'tree': {'children': [{'token': {'type': 'CONDITION_KEY',\n                'value': '555'},\n               'tree': None}],\n             'type': 'condition'}}],\n          'type': 'and_composition'}}],\n       'type': 'and_composition'}}],\n    'type': 'single_requirement_indicator_expression'}}],\n 'type': 'ahb_expression'}"
+      "text/plain": "{'type': 'ahb_expression',\n 'children': [{'tree': {'type': 'single_requirement_indicator_expression',\n    'children': [{'tree': None,\n      'token': {'value': 'Muss', 'type': 'MODAL_MARK'}},\n     {'tree': {'type': 'and_composition',\n       'children': [{'tree': {'type': 'and_composition',\n          'children': [{'tree': {'type': 'condition',\n             'children': [{'tree': None,\n               'token': {'value': '2', 'type': 'CONDITION_KEY'}}]},\n            'token': None},\n           {'tree': {'type': 'then_also_composition',\n             'children': [{'tree': {'type': 'and_composition',\n                'children': [{'tree': {'type': 'or_composition',\n                   'children': [{'tree': {'type': 'condition',\n                      'children': [{'tree': None,\n                        'token': {'value': '3', 'type': 'CONDITION_KEY'}}]},\n                     'token': None},\n                    {'tree': {'type': 'condition',\n                      'children': [{'tree': None,\n                        'token': {'value': '4', 'type': 'CONDITION_KEY'}}]},\n                     'token': None}]},\n                  'token': None},\n                 {'tree': {'type': 'package',\n                   'children': [{'tree': None,\n                     'token': {'value': '123P', 'type': 'PACKAGE_KEY'}}]},\n                  'token': None}]},\n               'token': None},\n              {'tree': {'type': 'condition',\n                'children': [{'tree': None,\n                  'token': {'value': '901', 'type': 'CONDITION_KEY'}}]},\n               'token': None}]},\n            'token': None}]},\n         'token': None},\n        {'tree': {'type': 'condition',\n          'children': [{'tree': None,\n            'token': {'value': '555', 'type': 'CONDITION_KEY'}}]},\n         'token': None}]},\n      'token': None}]},\n   'token': None}]}"
      },
      "execution_count": 2,
      "metadata": {},
@@ -43,7 +45,8 @@
     "from ahbicht.expressions.expression_resolver import parse_expression_including_unresolved_subexpressions\n",
     "\n",
     "tree = await parse_expression_including_unresolved_subexpressions(\n",
-    "    \"Muss [2] U ([3] O [4])[901] U [555]\"\n",
+    "    \"Muss [2] U (([3] O [4]) U [123P])[901] U [555]\",\n",
+    "    resolve_packages=False,  # false for now because the PackageResolver is not introduced yet\n",
     ")  # the expression as you get it from the AHB\n",
     "print(tree)  # The tree is a data structure that represents the expression\n",
     "\n",
@@ -65,7 +68,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{'ahb_expression': [{'single_requirement_indicator_expression': ['Muss',\n    {'and_composition': ['2',\n      {'and_composition': [{'then_also_composition': [{'or_composition': ['3',\n            '4']},\n          '901']},\n        '555']}]}]}]}"
+      "text/plain": "{'ahb_expression': [{'single_requirement_indicator_expression': ['Muss',\n    {'and_composition': [{'and_composition': ['2',\n        {'then_also_composition': [{'and_composition': [{'or_composition': ['3',\n              '4']},\n            '123P']},\n          '901']}]},\n      '555']}]}]}"
      },
      "execution_count": 3,
      "metadata": {},
@@ -73,11 +76,11 @@
     }
    ],
    "source": [
-    "# Now, to be honest, this looks pretty lengthy. That's why you can serialize the tree in a more concise way using the so called \"concise schema\".\n",
+    "# Now, to be honest, this looks pretty lengthy. That's why you can serialize the tree in a more concise way using the so-called \"concise schema\".\n",
     "# Note that the concise json dump is _not_ deserializable (yet). So \"concise serialization\" is a one way street so far.\n",
     "from ahbicht.json_serialization.concise_tree_schema import ConciseTreeSchema\n",
     "\n",
-    "ConciseTreeSchema().dump(tree)"
+    "ConciseTreeSchema().dump(tree)  # this contains all the relevant information and is pretty concise"
    ],
    "metadata": {
     "collapsed": false,
@@ -95,7 +98,8 @@
     "# You'll need to write your own Evaluator classes for:\n",
     "# 1. Requirement Constraints (RC) for conditions which are fulfilled/unfulfilled/unknown\n",
     "# 2. Format Constraints (FC) which describe that data must obey a specified format, e.g. number of post decimal places, MaLo-ID etc.\n",
-    "# 3. Hints: \"Hinweise\", plain text which is passed through"
+    "# 3. Hints: \"Hinweise\", plain text which is passed through\n",
+    "# 4. Packages: From 2022-10-01 it is possible to abbreviate frequently used expressions in \"packages\"."
    ],
    "metadata": {
     "collapsed": false,
@@ -120,11 +124,15 @@
     "    Any requirement constraint evaluator has to inherit from RcEvaluator.\n",
     "    \"\"\"\n",
     "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
     "    def _get_default_context(self) -> EvaluationContext:\n",
     "        # implement a default context here\n",
     "        return EvaluationContext(scope=None)\n",
     "\n",
     "    # in the AHBs the conditions are unique per EDIFACT format / Message Implementation Guide\n",
+    "    # these attributes may be used to distinguish different Evaluator instances and choose the right one\n",
     "    edifact_format = EdifactFormat.UTILMD\n",
     "    edifact_format_version = EdifactFormatVersion.FV2104  # valid since 2021-04-01\n",
     "\n",
@@ -144,7 +152,14 @@
     "\n",
     "    def evaluate_4(self, evaluatable_data: EvaluatableData, context: EvaluationContext):\n",
     "        # Insert your own logic for condition \"[4]\" here\n",
-    "        return evaluatable_data.edifact_seed[\"4\"]"
+    "        return evaluatable_data.edifact_seed[\"4\"]\n",
+    "\n",
+    "    # [8] and [9] are part of the package \"[123P]\"\n",
+    "    def evaluate_8(self, _, __):\n",
+    "        return ConditionFulfilledValue.FULFILLED\n",
+    "\n",
+    "    def evaluate_9(self, _, __):\n",
+    "        return ConditionFulfilledValue.FULFILLED"
    ],
    "metadata": {
     "collapsed": false,
@@ -199,7 +214,9 @@
    "execution_count": 7,
    "outputs": [],
    "source": [
-    "# and finally we define a hints provider\n",
+    "from ahbicht.expressions.package_expansion import PackageResolver\n",
+    "\n",
+    "# we also define a hints provider\n",
     "from ahbicht.expressions.hints_provider import HintsProvider\n",
     "\n",
     "\n",
@@ -218,7 +235,26 @@
     "        # (spoiler: Hochfrequenz has a public REST API that does exactly that, just drop us a line)\n",
     "        if condition_key == \"555\":\n",
     "            return \"Hinweis 555 applies.\"\n",
-    "        return None"
+    "        return None\n",
+    "\n",
+    "\n",
+    "# and a package resolver\n",
+    "class MyPackageResolver(PackageResolver):\n",
+    "    \"\"\"\n",
+    "    A PackageResolver answers the question: \"For which expression is [xxxP] the abbreviation?\"\n",
+    "    \"\"\"\n",
+    "\n",
+    "    edifact_format = EdifactFormat.UTILMD\n",
+    "    edifact_format_version = EdifactFormatVersion.FV2104\n",
+    "\n",
+    "    async def get_condition_expression(self, package_key: str) -> PackageKeyConditionExpressionMapping:\n",
+    "        if package_key == \"123P\":\n",
+    "            return PackageKeyConditionExpressionMapping(\n",
+    "                package_key=\"123P\", package_expression=\"[8] U [9]\", edifact_format=EdifactFormat.UTILMD\n",
+    "            )\n",
+    "        return PackageKeyConditionExpressionMapping(\n",
+    "            package_key=package_key, package_expression=None, edifact_format=EdifactFormat.UTILMD\n",
+    "        )"
    ],
    "metadata": {
     "collapsed": false,
@@ -243,8 +279,10 @@
     "}\n",
     "\n",
     "my_evaluatable_data = EvaluatableData(\n",
-    "    edifact_seed=hardcoded_content_evaluations\n",
-    ")  # this is the data that, in real life, contains the content of the edifact message"
+    "    edifact_seed=hardcoded_content_evaluations,\n",
+    "    edifact_format=EdifactFormat.UTILMD,  # format and format version may be used to select the appropriate evaluator instance\n",
+    "    edifact_format_version=EdifactFormatVersion.FV2104,\n",
+    ")  # this is the data that, in real life, contains the content of the edifact message."
    ],
    "metadata": {
     "collapsed": false,
@@ -258,6 +296,7 @@
    "execution_count": 9,
    "outputs": [],
    "source": [
+    "from ahbicht.content_evaluation.token_logic_provider import SingletonTokenLogicProvider, TokenLogicProvider\n",
     "import inject\n",
     "from ahbicht.content_evaluation.evaluationdatatypes import EvaluatableDataProvider\n",
     "from ahbicht.expressions.ahb_expression_evaluation import evaluate_ahb_expression_tree\n",
@@ -265,16 +304,28 @@
     "# We use dependency injection to get the evaluators in place:\n",
     "def provide_evaluatable_data():\n",
     "    # place your own dynamic(!) data provision method here\n",
-    "    return EvaluatableData(edifact_seed=hardcoded_content_evaluations)\n",
+    "    return EvaluatableData(\n",
+    "        edifact_seed=hardcoded_content_evaluations,\n",
+    "        edifact_format=EdifactFormat.UTILMD,\n",
+    "        edifact_format_version=EdifactFormatVersion.FV2104,\n",
+    "    )\n",
     "\n",
     "\n",
+    "# a token logic provider is a wrapper around all evaluator instance singletons\n",
+    "my_logic_provider = SingletonTokenLogicProvider(\n",
+    "    [MyPackageResolver(), MyHintsProvider(), MyRequirementConstraintEvaluator(), MyFormatConstraintEvaluator()]\n",
+    ")\n",
     "inject.clear_and_configure(\n",
-    "    lambda binder: binder.bind(RcEvaluator, MyRequirementConstraintEvaluator())\n",
-    "    .bind(FcEvaluator, MyFormatConstraintEvaluator())\n",
-    "    .bind(HintsProvider, MyHintsProvider())\n",
+    "    lambda binder: binder.bind(TokenLogicProvider, my_logic_provider)\n",
     "    # While the evaluators are injected as singleton style instances, the evaluatable data may change in each call.\n",
     "    # This is why they are injected with \"bind_to_provider\" instead of a simple \"bind\".\n",
     "    .bind_to_provider(EvaluatableDataProvider, provide_evaluatable_data)\n",
+    ")\n",
+    "\n",
+    "# now that we injected the package resolver, we can also expand the package 123P in the expression\n",
+    "tree = await parse_expression_including_unresolved_subexpressions(\n",
+    "    \"Muss [2] U (([3] O [4]) U [123P])[901] U [555]\",\n",
+    "    resolve_packages=True,  # must only be true if a package resolver is injected\n",
     ")\n",
     "\n",
     "# But later on we can provide AHBicht with the content evaluation results ...\n",
@@ -335,14 +386,14 @@
     }
    ],
    "source": [
-    "# If writing the RcEvaluator+FcEvaluator+HintsProvider feels like over-engineering for your use case, we have you covered.\n",
+    "# If writing the RcEvaluator+FcEvaluator+HintsProvider+PackageResolver feels like over-engineering for your use case, we have you covered.\n",
     "# If you already know the values of the single requirement constraints, format constraints and texts for the hint, you can just generate the Evaluator classes on the fly based on the information you have.\n",
     "from ahbicht.content_evaluation.evaluator_factory import create_and_inject_hardcoded_evaluators\n",
     "from ahbicht.content_evaluation.content_evaluation_result import ContentEvaluationResult\n",
     "\n",
     "inject.clear()\n",
-    "# If you're only dealing with hard coded content evaluation results, there is a short cut to evaluate an expression:\n",
-    "# 1. put the hard coded results into a so called content evaluation result:\n",
+    "# If you're only dealing with hard coded content evaluation results, there is a shortcut to evaluate an expression:\n",
+    "# 1. put the hard coded results into a so-called content evaluation result:\n",
     "content_evaluation_result = ContentEvaluationResult(\n",
     "    hints={\"555\": \"foo\"},\n",
     "    format_constraints={\n",
@@ -352,10 +403,15 @@
     "        \"2\": ConditionFulfilledValue.FULFILLED,\n",
     "        \"3\": ConditionFulfilledValue.UNFULFILLED,\n",
     "        \"4\": ConditionFulfilledValue.FULFILLED,\n",
+    "        \"8\": ConditionFulfilledValue.FULFILLED,\n",
+    "        \"9\": ConditionFulfilledValue.FULFILLED,\n",
     "    },\n",
     ")\n",
     "create_and_inject_hardcoded_evaluators(\n",
-    "    content_evaluation_result\n",
+    "    content_evaluation_result,\n",
+    "    evaluatable_data_provider=provide_evaluatable_data,\n",
+    "    edifact_format=EdifactFormat.UTILMD,\n",
+    "    edifact_format_version=EdifactFormatVersion.FV2104,\n",
     ")  # this does all the magic, no need to manually define classes\n",
     "evaluated = await evaluate_ahb_expression_tree(tree, entered_input=\"\")\n",
     "print(evaluated)"
@@ -432,7 +488,12 @@
    "source": [
     "results = list()\n",
     "for content_evaluation_result in precalculated_results:\n",
-    "    create_and_inject_hardcoded_evaluators(content_evaluation_result)\n",
+    "    create_and_inject_hardcoded_evaluators(\n",
+    "        content_evaluation_result,\n",
+    "        evaluatable_data_provider=provide_evaluatable_data,\n",
+    "        edifact_format=EdifactFormat.UTILMD,\n",
+    "        edifact_format_version=EdifactFormatVersion.FV2104,\n",
+    "    )\n",
     "    try:\n",
     "        expression_evaluation_result = await evaluate_ahb_expression_tree(\n",
     "            await parse_expression_including_unresolved_subexpressions(\n",
