🎨use a Context Variable in the Integration Test

--- a/minimal_working_example.ipynb
+++ b/minimal_working_example.ipynb
@@ -304,6 +304,7 @@
     "# We use dependency injection to get the evaluators in place:\n",
     "def provide_evaluatable_data():\n",
     "    # place your own dynamic(!) data provision method here\n",
+    "    # in web applications it's recommended to access a context variable here that is set in the request handler\n",
     "    return EvaluatableData(\n",
     "        edifact_seed=hardcoded_content_evaluations,\n",
     "        edifact_format=EdifactFormat.UTILMD,\n",
